--- a/game.css
+++ b/game.css
@@ -19,6 +19,11 @@ body{
     position: relative;
     top: 30px;
 }
+#stopwatch{
+    text-align: center;
+    font-size: 20px;
+    font-family: cursive;
+}
 table{
     background-color: grey;
     margin: 30px;
